I haven't done that much in terms of the Login, leave the spacing alone because I'm going to experiemnt with that Later. AYush please add the logo for the login and i can fix the rest as soon as that is done

--- a/frontend/tailwind.css
+++ b/frontend/tailwind.css
@@ -1,41 +1,45 @@
+.mt-4 {
+  margin-top: 1rem
+}
+
 .mb-4 {
   margin-bottom: 1rem
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem
-}
-
-.mb-8 {
-  margin-bottom: 2rem
-}
-
-.mb-28 {
-  margin-bottom: 7rem
-}
-
-.mb-32 {
-  margin-bottom: 8rem
-}
-
-.mb-48 {
-  margin-bottom: 12rem
-}
-
-.mb-40 {
-  margin-bottom: 10rem
-}
-
-.mb-36 {
-  margin-bottom: 9rem
 }
 
 .mb-6 {
   margin-bottom: 1.5rem
 }
 
-.mt-4 {
-  margin-top: 1rem
+.mb-3 {
+  margin-bottom: 0.75rem
+}
+
+.mb-32 {
+  margin-bottom: 8rem
+}
+
+.mb-36 {
+  margin-bottom: 9rem
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem
+}
+
+.mb-16 {
+  margin-bottom: 4rem
+}
+
+.mb-20 {
+  margin-bottom: 5rem
 }
 
 .flex {
@@ -80,9 +84,24 @@
   background-color: rgb(59 130 246 / var(--tw-bg-opacity))
 }
 
-.bg-\[\#FEFF65\] {
+.bg-yellow-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 255 101 / var(--tw-bg-opacity))
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#D86C70\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 108 112 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#BEE\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 238 238 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#BEE9E4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(190 233 228 / var(--tw-bg-opacity))
 }
 
 .p-2 {
@@ -99,21 +118,6 @@
   padding-bottom: 0.25rem
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem
-}
-
-.py-\[-6\] {
-  padding-top: -6;
-  padding-bottom: -6
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem
-}
-
 .text-center {
   text-align: center
 }
@@ -123,14 +127,14 @@
   line-height: 1.75rem
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem
-}
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem
 }
 
 .text-white {
